--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ nav {
     top: 0;
     width: 100%;
     background: transparent;
-    color: white;
+    color: black;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -30,6 +30,10 @@ nav .logo {
     letter-spacing: 2px;
 }
 
+#navbar{
+    background-color: plum;
+}
+
 nav ul {
     list-style: none;
     display: flex;
@@ -37,17 +41,17 @@ nav ul {
 }
 
 nav ul li a {
-    color: white;
+    color: black;
     text-decoration: none;
-    font-weight: 600;
+    font-size: 25;
     transition: color 0.3s ease;
 }
 
 nav ul li a:hover {
-    color: #a3d2ca;
+    color: purple;
 }
 header {
-    background: url('https://images.unsplash.com/photo-1600093463592-8e36ae95ef56?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.1.0') no-repeat center center/cover;
+    background: url(https://p4.wallpaperbetter.com/wallpaper/790/734/537/nature-coast-clouds-anime-girls-wallpaper-preview.jpg) no-repeat center center/cover;
     height: 70vh;
     display: flex;
     justify-content: center;
@@ -64,4 +68,20 @@ header h1 {
     max-width: 700px;
     line-height: 1.2;
     animation: fadeInDown 1.5s ease forwards;
+}
+.Mangá{
+    display: flex;
+}
+img{
+    height: 300px;
+    width: 15%;
+    padding: 20px;
+    margin: 0 auto;
+    justify-content: center;
+    align-items: center;
+}
+.conteiner{
+    list-style-type: none;
+    font-size: 15;
+    color: black;
 }
