--- a/style.css
+++ b/style.css
@@ -75,7 +75,7 @@ header h1 {
 img{
     height: 300px;
     width: 15%;
-    padding: 20px;
+    padding:  25px;
     margin: 0 auto;
     justify-content: center;
     align-items: center;
@@ -83,5 +83,7 @@ img{
 .conteiner{
     list-style-type: none;
     font-size: 15;
-    color: black;
+    text-align: center;
+    padding: 25px;
+    
 }
